--- a/styles.css
+++ b/styles.css
@@ -238,27 +238,6 @@ body {
     /* background-color: var(--bg-o); */
 }
 
-/* Mobile responsiveness */
-@media (max-width: 768px) {
-    .main-body, .about-body {
-        flex-direction: column;
-        justify-content: flex-start;
-        padding: 20px;
-    }
-
-    .about-overlay-main, .about-overlay-right {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-
-    .overlay-bottom-right {
-        width: 100%;
-        right: 0;
-        left: 0;
-        margin-bottom: 20px;
-    }
-}
-
 /* Contact Section */
 .contact-body {
     width: 100%;
@@ -327,19 +306,6 @@ body {
     font-weight: bold;
 }
 
-/* Mobile responsiveness */
-@media (max-width: 768px) {
-    .contact-body {
-        padding: 20px;
-        flex-direction: column;
-    }
-
-    .overlay-contact, .overlay-why-us {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-}
-
 /* Footer */
 .footer {
     background-color: var(--bg); /* Same primary color as header */
@@ -357,4 +323,131 @@ body {
 
 .footer .link {
     color: var(--txt);
+}
+
+
+
+@media (max-width: 1200px) {
+    .overlay-bottom-right {
+        font-size: 16px;
+    }
+    .overlay-main p {
+        font-size: 16px;
+    }
+}
+
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+    .navbar {
+        height: 10vh;
+    }
+
+    .navbar-title {
+        font-size: 14px;
+        margin: 0;
+    }
+    
+    .navbar-subtitle {
+        font-size: 10px;
+        opacity: 0.8; /* Slightly lighter subtitle */
+        width: fit-content;
+    }
+
+    .navbar-links {
+        display: none;
+    }
+    
+    .navbar-links a {
+        font-size: 10px;
+    }
+
+    .main-body, .about-body {
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 20px;
+        /* min-height: 100vh; */
+    }
+
+    .overlay-main {
+        margin: auto;
+    }
+    .overlay-main p {
+        font-size: 14px;
+    }
+
+    .about-overlay-main, .about-overlay-right {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .about-overlay-main h2 {
+        margin: .5em 0;
+        font-size: 14px;
+    }
+    .about-overlay-main h4 {
+        font-size: 14px;
+        margin: 2em 0;
+    }
+    
+    .about-overlay-main p {
+        font-size: 14px;
+        margin: 1em 0;
+    }
+
+    .overlay-bottom-right {
+        width: 100%;
+        right: 0;
+        left: 0;
+        margin-bottom: 20px;
+        font-size: 14px;
+    }
+    .contact-body {
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    .overlay-contact, .overlay-why-us {
+        width: 100%;
+        margin-bottom: 20px;
+        font-size: 14px;
+    }
+
+    .overlay-contact h1 {
+        font-size: 18px;
+    }
+    .overlay-contact h3 {
+        font-size: 12px;
+        border-bottom: 1px solid silver;
+    }
+    .overlay-why-us h1,
+    .overlay-why-us h4 {
+        font-size: 12px;
+    }
+
+    .about-overlay-right .box {
+        margin-bottom: 10px;
+        text-align: center;
+    }
+    
+    .about-overlay-right .box p {
+        margin: 0;
+        font-size: 12px;
+    }
+    
+    .about-overlay-right .tick {
+        font-size: 10px;
+        margin-top: .5em;
+        /* background-color: var(--bg-o); */
+    }
+    .footer {
+        padding: 10px 0;
+        width: 100%;
+        height: 5vh;
+    }
+    
+    .footer p {
+        margin: 0;
+        font-size: 10px;
+    }
 }
