--- a/styles.css
+++ b/styles.css
@@ -366,7 +366,7 @@ body {
         flex-direction: column;
         justify-content: flex-start;
         padding: 20px;
-        /* min-height: 100vh; */
+        min-height: 100vh;
     }
 
     .overlay-main {
