--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 /* NAVBAR */
 .navbar {
-    height: 10vh;
+    min-height: 10vh;
     background-color: var(--bg) !important;
 }
 .navbar-brand {
@@ -31,7 +31,10 @@ body {
 .nav-link {
     color: var(--txt) !important;
 }
-
+.navbar-toggler-icon {
+    color: var(--txt) !important;
+    outline: none !important;
+}
 /* MAIN SECTION */
 .main-body {
     width: 100%;
@@ -63,10 +66,256 @@ body {
     border-radius: 5px;
     font-weight: bold;
 }
+.overlay-bottom-left {
+    display: none;
+}
 .overlay-bottom-right {
     padding: 20px;
     margin: 20px;
     background-color: rgba(115, 115, 115, 0.8);
     color: var(--txt);
     border-radius: 8px;
+}
+
+/* ABOUT BODY */
+.about-body {
+    width: 100%;
+    max-width: 1400px;
+    min-height: 100vh;
+    background: url('assets/img2.jpg') no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-overlay-main {
+    padding: 30px;
+    margin: 20px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--bg-o);
+    color: var(--txt);
+    border-radius: 10px;
+    text-align: center; 
+}
+
+.about-overlay-right {
+    padding: 30px;
+    margin: 20px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--bg-o);
+    color: var(--txt);
+    border-radius: 10px;
+    text-align: center; 
+}
+.box {
+    margin: .5em 0;
+}
+.tick {
+    margin: auto;
+    padding: .15em;
+    width: fit-content;
+    background-color: rgb(0, 197, 0);
+    color: white;
+    font-size: 24px;
+    font-weight: 900;
+    border-radius: 5px;
+}
+
+/* CONTACT BODY */
+.contact-body {
+    width: 100%;
+    max-width: 1400px;
+    min-height: 90vh;
+    background: url('assets/img3.jpg') no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay-contact {
+    padding: 10px 30px 0 30px;
+    margin: 20px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--bg-o);
+    color: var(--txt);
+    border-radius: 10px;
+    text-align: center; 
+}
+
+.overlay-why-us {
+    padding: 30px;
+    margin: 20px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--bg-o);
+    color: var(--txt);
+    border-radius: 10px;
+    text-align: center; 
+}
+
+.contact-button {
+    background-color: var(--txt);
+    color: var(--bg);
+    padding: 5px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+/* FOOTER */
+.footer {
+    background-color: var(--bg) !important;
+    min-height: 10vh;
+    color: var(--txt);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.foot-div {
+    display: none;
+}
+
+.link {
+    padding: .2em;
+    background-color: var(--txt);
+    color: #000099;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 600    ;
+}
+
+@media (min-width: 768px) {
+    .navbar-brand {
+        font-size: 36px;
+    }
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #ccc;
+    }
+    .main-body, .about-body, .contact-body {
+        max-width: 1400px;
+    }
+    .overlay-main {
+        width: 80%;
+        font-size: 14px;
+        padding: 30px;
+        margin: 20px;
+        height: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: var(--bg-o);
+        color: var(--txt);
+        border-radius: 10px;
+        text-align: center;
+    }
+
+    .map-button {
+        background-color: var(--txt);
+        color: var(--bg);
+        padding: 5px 20px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+    }
+    
+    .overlay-bottom {
+        width: 80%;
+        height: 40%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .overlay-bottom-left {
+        display: flex;
+        flex: 1;
+    }
+    .carsqa-img {
+        width: 250px;
+    }
+    .overlay-bottom-right {
+        max-height: 300px;
+        flex: 1;
+        font-size: 10px;
+        text-align: center;
+        padding: 20px;
+        margin: 20px;
+        background-color: rgba(115, 115, 115, 0.8);
+        color: var(--txt);
+        border-radius: 8px;
+    }
+
+    .about-body {
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+    }
+    .about-overlay-main {
+        flex: 3;
+    }
+    
+    .about-overlay-right {
+        flex: 2; 
+    }
+    .box {
+        margin: .5em 0;
+    }
+    .tick {
+        margin: auto;
+        padding: .15em;
+        width: fit-content;
+        background-color: rgb(0, 197, 0);
+        color: white;
+        font-size: 24px;
+        font-weight: 900;
+        border-radius: 5px;
+    }
+
+    .footer {
+        min-height: 10vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .foot-div {
+        display: block;
+    }
+    .link {
+        padding: .2em;
+        background-color: var(--bg);
+        color: var(--txt);
+        border-radius: 5px;
+        text-decoration: none;
+        font-weight: 600    ;
+    }
+}
+
+@media (min-width: 1000px) {
+    .overlay-main {
+        font-size: 24px;
+    }
+    .overlay-bottom-right {
+        font-size: 20px;
+    }
+    .carsqa-img {
+        width: 500px;
+    }
 }
